--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/norm.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Montserrat:wght@300;400;500;600;700;900&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Montserrat:wght@300;400;500;600;700;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -91,6 +91,51 @@
                         </div>
                     </li>
                 </ul>
+
+            </section>
+            <section class="team">
+                <h2>
+                    <span class="h2-top">Who we are</span>
+                    <span class="h2-button">Meet our team</span>
+                </h2>
+                <p class="list-text team-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. At officia, natus a cumque vitae minus ad facere similique.<wbr> Modi dolores laborum tenetur minima ad labore illum quisquam mollitia nostrum sit.
+                </p>
+                <ul class="team-list">
+                    <li class="team-items">
+                        <img class="img-team" src="img/7.jpg" alt="kartinka7" width="380px" height="470px">
+                        <div class="gradient">
+                            <button class="facebook button"></button>
+                            <button class="twitter button"></button>
+                            <button class="pinterest button"></button>
+                            <button class="insta button"></button>
+                        </div>
+                        <h4>mattherw dix</h4>
+                        <span class="position">graphic design</span>
+                    </li>
+                    <li class="team-items">
+                        <img class="img-team" src="img/8.jpg" alt="kartinka8" width="380px" height="470px">
+                        <div class="gradient">
+                            <button class="facebook button"></button>
+                            <button class="twitter button"></button>
+                            <button class="pinterest button"></button>
+                            <button class="insta button"></button>
+                        </div>
+                        <h4>christopher campbell</h4>
+                        <span class="position">branding/UX design</span>
+                    </li>
+                    <li class="team-items">
+                        <img class="img-team" src="img/9.jpg" alt="kartinka9" width="380px" height="470px">
+                        <div class="gradient">
+                            <button class="facebook button"></button>
+                            <button class="twitter button"></button>
+                            <button class="pinterest button"></button>
+                            <button class="insta button"></button>
+                        </div>
+                        <h4>michael fertig</h4>
+                        <span class="position">Developer</span>
+                    </li>
+                </ul>
+
 
             </section>
         </main>
