--- a/index.html
+++ b/index.html
@@ -102,7 +102,9 @@
                 </p>
                 <ul class="team-list">
                     <li class="team-items">
-                        <img class="img-team" src="img/7.jpg" alt="kartinka7" width="380px" height="470px">
+                        <div class="wrap-img">
+                            <img class="img-team" src="img/7.jpg" alt="kartinka7" width="380px" height="470px">
+                        </div>
                         <div class="gradient">
                             <button class="facebook button"></button>
                             <button class="twitter button"></button>
@@ -110,10 +112,12 @@
                             <button class="insta button"></button>
                         </div>
                         <h4>mattherw dix</h4>
-                        <span class="position">graphic design</span>
+                        <span class="position">Graphic Design</span>
                     </li>
                     <li class="team-items">
-                        <img class="img-team" src="img/8.jpg" alt="kartinka8" width="380px" height="470px">
+                        <div class="wrap-img">
+                            <img class="img-team" src="img/8.jpg" alt="kartinka8" width="380px" height="470px">
+                        </div>
                         <div class="gradient">
                             <button class="facebook button"></button>
                             <button class="twitter button"></button>
@@ -121,10 +125,12 @@
                             <button class="insta button"></button>
                         </div>
                         <h4>christopher campbell</h4>
-                        <span class="position">branding/UX design</span>
+                        <span class="position">Branding/UX design</span>
                     </li>
                     <li class="team-items">
-                        <img class="img-team" src="img/9.jpg" alt="kartinka9" width="380px" height="470px">
+                        <div class="wrap-img">
+                            <img class="img-team" src="img/9.jpg" alt="kartinka9" width="380px" height="470px">
+                        </div>
                         <div class="gradient">
                             <button class="facebook button"></button>
                             <button class="twitter button"></button>
@@ -139,6 +145,14 @@
 
             </section>
         </main>
+        <footer>
+            <span class="text-footer">© 2016 MoGo free PSD template by <span>Laaqiq</span></span>
+
+            <form action="#">
+                <input class="email" type="text" name="email" placeholder="your email...">
+                <input class="email-bitton" type="submit" value="subscribe">
+            </form>
+        </footer>
     </div>
 </body>
 
